src/css/custom.css
/* stylelint-disable docusaurus/copyright-header */
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

/* You can override the default Infima variables here. */

@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,400;0,600;1,400;1,600&display=swap');

:root {
  --ifm-color-primary: #009cbc;
  --ifm-color-primary-dark: #008ca9;
  --ifm-color-primary-darker: #0085a0;
  --ifm-color-primary-darkest: #006d84;
  --ifm-color-primary-light: #00accf;
  --ifm-color-primary-lighter: #00b3d8;
  --ifm-color-primary-lightest: #00cbf4;
  --ifm-code-font-size: 95%;
  --ifm-font-family-base: 'IBM Plex Sans', sans-serif;
  --ifm-heading-color: var(--ifm-color-primary);
  --ifm-color-secondary-lightest:	#a7a7a7;	
  --ifm-color-secondary-lighter:	#939494;	
  --ifm-color-secondary-light:	#8d8e8e;
  --ifm-color-secondary:	#808181;
  --ifm-color-secondary-dark:	#737474;
  --ifm-color-secondary-darker:	#6d6e6e;
  --ifm-color-secondary-darkest:	#5a5a5a;
  --ifm-color-danger: #EE730C;
  --ifm-color-danger-dark: #d6680b;
  --ifm-color-danger-darker: #ca620a;
  --ifm-color-danger-darkest: #a75108;
  --ifm-color-danger-light: #f4801f;
  --ifm-color-danger-lighter: #f4872b	;
  --ifm-color-danger-lightest: #f69b4f;
  --ifm-color-success-lightest:	#a7a7a7;	
  --ifm-color-success-lighter:	#939494;	
  --ifm-color-success-light:	#8d8e8e;
  --ifm-color-success:	#808181;
  --ifm-color-success-dark:	#737474;
  --ifm-color-success-darker:	#6d6e6e;
  --ifm-color-success-darkest:	#5a5a5a;
  --ifm-color-caution: #f1de1d;
  --ifm-color-caution-dark: #e5d20e;
  --ifm-color-caution-darker: #d8c60d;
  --ifm-color-caution-darkest: #b2a30b;
  --ifm-color-caution-light: #f3e236;
  --ifm-color-caution-lighter: #f3e443;
  --ifm-color-caution-lightest: #f6e969;
  --ifm-global-shadow-lw: 0 3px 4px 0 rgba(0, 0, 0, 0.3);
  --ifm-link-color: var(--ifm-color-danger);
  --ifm-link-decoration: bold;
  --ifm-link-hover-color: var(--ifm-link-color);
  --ifm-link-hover-decoration: underline;
}

.docusaurus-highlight-code-line {
  background-color: rgba(0, 0, 0, 0.1);
  display: block;
  margin: 0 calc(-1 * var(--ifm-pre-padding));
  padding: 0 var(--ifm-pre-padding);
}

html[data-theme='dark'] .docusaurus-highlight-code-line {
  background-color: rgba(0, 0, 0, 0.3);
}

.hero__title {
  color: var(--ifm-hero-text-color)
}

.footer--dark {
  --ifm-footer-background-color: var(--ifm-color-secondary);
  --ifm-footer-color: var(--ifm-footer-link-color);
  --ifm-footer-link-color: var(--ifm-color-white);
  --ifm-footer-title-color: var(--ifm-color-white);
}

.alert {
  --ifm-code-background: var(--ifm-alert-background-color-highlight);
  --ifm-alert-background-color: #white;
  --ifm-link-color: var(--ifm-alert-foreground-color);
  --ifm-link-hover-color: var(--ifm-alert-foreground-color);
  --ifm-link-decoration: underline;
  --ifm-tabs-color: var(--ifm-alert-foreground-color);
  --ifm-tabs-color-active: var(--ifm-alert-foreground-color);
  --ifm-tabs-color-active-border: var(--ifm-alert-border-color);
  background-color: var(--ifm-alert-background-color);
  border-color: var(--ifm-alert-border-color);
  border-style: solid;
  border-width: var(--ifm-alert-border-width);
  border-left-width: var(--ifm-alert-border-left-width);
  border-radius: var(--ifm-alert-border-radius);
  box-shadow: var(--ifm-alert-shadow);
  color: var(--ifm-alert-foreground-color);
  padding: var(--ifm-alert-padding-vertical) var(--ifm-alert-padding-horizontal);
}

.alert--danger {
  --ifm-alert-background-color: #white;
  --ifm-alert-background-color-highlight: rgba(250, 56, 62, 0.15);
  --ifm-alert-foreground-color: var( --ifm-text-color );
  --ifm-alert-border-color: var(--ifm-color-danger);
}

.alert--success {
  --ifm-alert-background-color: #white;
  --ifm-alert-background-color-highlight: rgba(0, 164, 0, 0.15);
  --ifm-alert-foreground-color: var( --ifm-text-color );
  --ifm-alert-border-color: var(--ifm-color-success-dark);
}

.alert--warning {
  --ifm-alert-background-color: #white;
  --ifm-alert-background-color-highlight: rgba(255, 186, 0, 0.15);
  --ifm-alert-foreground-color: var( --ifm-text-color );
  --ifm-alert-border-color: var(--ifm-color-warning);
}


.button--primary {
  --ifm-button-border-color: var(--ifm-color-primary);
}

.button--primary:not(.button--outline) {
    --ifm-button-background-color: var(--ifm-color-primary);
  }

.button--primary:not(.button--outline):hover {
      --ifm-button-background-color: var(--ifm-color-primary-dark);
      --ifm-button-border-color: var(--ifm-color-primary-dark);
    }

/* Increase specificity. */

.button--primary:active,
  .button--primary.button--active {
    --ifm-button-border-color: var(--ifm-color-primary-darker);
    --ifm-button-background-color: var(--ifm-color-primary-darker);

    /* Has to be explicitly defined because .button--outline has quite high specificity. */
    background-color: var(--ifm-color-primary-darker);
    /* Has to be explicitly defined because .button--outline has quite high specificity. */
    border-color: var(--ifm-color-primary-darker);
  }

.button--secondary {
  --ifm-button-border-color: var(--ifm-color-secondary);
}

.button--secondary:not(.button--outline) {
  --ifm-button-background-color: var(--ifm-color-secondary);
}

.button--secondary:not(.button--outline):hover {
  --ifm-button-background-color: var(--ifm-color-danger);
  --ifm-button-border-color: var(--ifm-color-danger);
}

.button.button--secondary {
  color: var(--ifm-color-white);
}


.button--negative {
  --ifm-button-border-color: white;
}
    
.button--negative:not(.button--outline) {
  --ifm-button-background-color: white;
}
    
.button--negative:not(.button--outline):hover {
  --ifm-button-background-color: var(--ifm-color-danger);
  --ifm-button-border-color: var(--ifm-color-danger);
  color: var(--ifm-color-white)
}
    
.button.button--negative {
  color: var(--ifm-color-danger);
}

.n4c--logo {
  float: left;
  margin-top: 0;
  padding: 0 ;
}


/* Links */

a {
  color: var(--ifm-link-color);
  /* autoprefixer: ignore next */
  text-decoration: var(--ifm-link-decoration);
  transition: color var(--ifm-transition-fast) var(--ifm-transition-timing-default);
  font-weight: bold;
}

a:hover {
    color: var(--ifm-link-hover-color);
    /* autoprefixer: ignore next */
    text-decoration: var(--ifm-link-hover-decoration);
  /*  text-decoration-thickness: 2px;*/
  }

a:not([href]) {
    text-decoration: none;
  }

.menu__link {
  border-radius: 0.25rem;
  font-weight: unset;
  color: var(--ifm-menu-color);
  display: flex;
  justify-content: space-between;
  line-height: 1.25;
  padding: var(--ifm-menu-link-padding-vertical)
    var(--ifm-menu-link-padding-horizontal);
  position: relative;
  transition-property: color, background;
  transition-duration: var(--ifm-transition-fast);
  transition-timing-function: var(--ifm-transition-timing-default);
}

.pagination-nav__link {
  border: none;
  border-radius: var(--ifm-pagination-nav-border-radius);
  flex-grow: 1;
  line-height: var(--ifm-heading-line-height);
  padding: var(--ifm-global-spacing);
  transition: background-color var(--ifm-button-transition-duration) var(--ifm-transition-timing-default);
  box-shadow: var(--ifm-alert-shadow);
}

.pagination-nav__link:hover {
  background-color: var(--ifm-menu-color-background-hover);
  text-decoration: none;
}

.table-of-contents__link {
  color:var(--ifm-toc-link-color);
  font-weight: unset;
 }

 .table-of-contents__link--active,
.table-of-contents__link--active code,
.table-of-contents__link:hover,
.table-of-contents__link:hover code {
 color:var(--ifm-color-primary);
 text-decoration:none
}

